# recallops

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: PUBLISHING.md  README.md  cli.md  phase0-validation.md  sizing.md
examples/: quickstart.sh
examples/corpus/api/: auth.md  rate-limits.md
examples/corpus/billing/: invoices.md  refunds.md
examples/corpus/eng/: architecture.md
examples/corpus/hr/: onboarding.md
examples/corpus/legal/: dpa.md
examples/corpus/ops/: incident-runbook.md
examples/corpus/product/: roadmap.md
examples/corpus/sales/: pricing.md
examples/corpus/security/: sso.md
examples/corpus/support/: tickets-faq.md
examples/github-action/: recall-ci.yml
recallops/: __init__.py  ablation.py  bm25.py  cli.py  config.py  confirm.py  dataset.py  diffing.py  evalrunner.py  funnel.py  fusion.py  gating.py  hashing.py  ingest.py  llm.py  models.py  narrative.py  phase0.py  pr_comment.py  recorder.py  report.py  rerankers.py  retrieval.py  scorecard.py  stats.py  store.py
recallops/adapters/: base.py  chroma.py  lancedb.py  local.py  pgvector.py  qdrant.py
recallops/pipeline/: chunkers.py  parsers.py  providers.py
tests/: adapter_contract.py  conftest.py  test_ablation.py  test_action_yml.py  test_adapter_contract_local.py  test_bm25.py  test_chroma.py  test_chunkers.py  test_cli.py  test_config_adapters.py  test_confirm.py  test_dataset.py  test_diffing.py  test_e2e_adapters.py  test_e2e_journeys.py  test_evalrunner.py  test_funnel.py  test_fusion.py  test_gating.py  test_hashing.py  test_ingest.py  test_lancedb.py  test_llm.py  test_local_adapter.py  test_models.py  test_narrative.py  test_parsers.py  test_pgvector.py  test_phase0.py  test_pr_comment.py  test_providers.py  test_qdrant.py  test_quickstart_pin.py  test_recorder.py  test_report.py  test_retrieval.py  test_scorecard.py  test_stats.py  test_store.py
