# Distribution + import name: recallops (chosen because "recallkit" was already
# taken on PyPI). "recallops" was free on PyPI at rename time, re-verify
# availability and configure the trusted publisher before the first release.
# See docs/PUBLISHING.md.
[project]
name = "recallops"
version = "0.1.0"
description = "Retrieval regression testing with verified root-cause attribution for RAG pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "RecallOps contributors" }]
keywords = [
    "rag", "retrieval", "evaluation", "regression-testing", "vector-database",
    "embeddings", "pgvector", "attribution", "ci", "llm", "information-retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pyarrow>=15.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
pg = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/OWNER/recallops"
Repository = "https://github.com/OWNER/recallops"
Documentation = "https://github.com/OWNER/recallops/tree/main/docs"
Issues = "https://github.com/OWNER/recallops/issues"
Changelog = "https://github.com/OWNER/recallops/blob/main/CHANGELOG.md"

[project.scripts]
recall = "recallops.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recallops"]

[tool.hatch.build.targets.sdist]
include = ["recallops", "tests", "examples", "docs", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["recallops"]
omit = ["recallops/scorecard.py", "recallops/phase0.py"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W", "F", "I", "UP"]
